fix: display: table fixes for WorkerPool queues
We had a typo in a className (workqueue versus workqueues), and the use of a table-row-group resulted in misaligned row labels across rows. Plus, the switch to a table layout allows us to remove the whole width and maxNWorkers mess.

--- a/platform/dashboard/src/client/components/Queue.scss
+++ b/platform/dashboard/src/client/components/Queue.scss
@@ -2,21 +2,18 @@
   column-gap: 3px;
 }
 
-.codeflare--workqueue {
+.codeflare--workqueues {
   display: table;
-}
 
-.codeflare--workqueues-rowgroup {
-  display: table-row-group;
-}
-
-.codeflare--workqueues-row {
-  display: table-row;
-}
-
-.codeflare--workqueues-cell {
-  &:first-child {
-    padding-right: 3px;
+  .codeflare--workqueues-row {
+    display: table-row;
   }
-  display: table-cell;
+
+  .codeflare--workqueues-cell {
+    &:first-child {
+      text-align: right;
+      padding-right: 3px;
+    }
+    display: table-cell;
+  }
 }
